cot-macros/tests/ui/attr_model_multiple_pks.rs
use cot::db::model;

#[model]
struct MyModel {
    id: i64,
    #[model(primary_key)]
    id_2: i64,
    name: String,
}

fn main() {}
